--- a/components/custom/CollectionVideo/styles.module.scss
+++ b/components/custom/CollectionVideo/styles.module.scss
@@ -9,7 +9,7 @@
   right: 20px;
   background-color: rgb(255, 255, 255, 0.1);
   cursor: pointer;
-  z-index: 9;
+  z-index: 1;
   min-width: 100px;
   font-weight: 700;
   font-size: 13px;
