--- a/components/custom/Navbar/Mobile/styles.module.scss
+++ b/components/custom/Navbar/Mobile/styles.module.scss
@@ -3,7 +3,7 @@
 .nav {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
 
   @media (min-width: 768px) {
     display: none;
@@ -53,7 +53,7 @@
   inset: 0;
   backdrop-filter: blur(10px);
   height: 100dvh;
-  z-index: 1;
+  z-index: 2;
   cursor: pointer;
 }
 
@@ -62,7 +62,7 @@
   top: 0px;
   width: 100%;
   height: min-content;
-  z-index: 1;
+  z-index: 3;
   outline: none;
   background-color: white;
   color: black;
